// $Id$
// $Name$

Image Picker  for D6 in DRUPAL-6--2, 2009-09-27
------------------------------------
by hutch, added exif info, fixed noisy no-exif message

Image Picker  for D6 in DRUPAL-6--2, 2009-09-23
------------------------------------
by hutch, added batch import, copy

Image Picker  for D6 in DRUPAL-6--2, 2009-09-14
------------------------------------
by hutch, #571198 fixed

Image Picker  for D6 in DRUPAL-6--2, 2009-09-09
------------------------------------
by hutch, added group enable/disable, added to contrib

Image Picker  for D6 in DRUPAL-6--2, 2009-08-29
------------------------------------
by hutch, added indexes to imagepicker_group_images
added field descriptions to install schema
fixed bug in user config tab

Image Picker  for D6 in DRUPAL-6--2, 2009-08-05
------------------------------------
by hutch, added watermarks, save original
and user config page

Image Picker  for D6 in DRUPAL-6--2, 2009-07-22
------------------------------------
by hutch, added additional css feature

Image Picker  for D6 in DRUPAL-6--2, 2009-07-16
------------------------------------
by hutch, added imagepicker.theme.inc

Image Picker  for D6 in DRUPAL-6--2, 2009-07-16
------------------------------------
by hutch, fixed bug in form_alter re block form

Image Picker  for D6 in DRUPAL-6--2, 2009-07-16
------------------------------------
by hutch, added link to groups in admin mode
fixed bug in language in template

Image Picker  for D6 in DRUPAL-6--2, 2009-07-09
------------------------------------
by hutch, added search to browse and list images
cleaned up noisy messages

Image Picker  for D6 in DRUPAL-6--2, 2009-07-01
------------------------------------
by hutch, added thickbox integration
added contribs folder
fixed #504914 quota bug
fixed #504872 multiple lines in description
revemped menus and improved theming

Image Picker  for D6 in DRUPAL-6--2, 2009-06-28
------------------------------------
by hutch, added display description option
