@@ -659,7 +659,10 @@ function imagepicker_admin_view($img_id, $account = FALSE) {
   if ($img) {
     $imgpath = imagepicker_get_image_path($img, 'full', $userdir);
     $info = image_get_info(imagepicker_get_path(FALSE, $userdir) . $img['img_name']);
-    $exifinfo = imagepicker_get_exifinfo(imagepicker_get_path(FALSE, $userdir) . $img['img_name']);
+    $exifinfo = "";
+    if ($info['extension'] != 'gif' ) {
+      $exifinfo = imagepicker_get_exifinfo(imagepicker_get_path(FALSE, $userdir) . $img['img_name']);
+    }
     $view = theme('imagepicker_view', $img, $imgpath, $info, $exifinfo);
     $form1 = drupal_get_form('imagepicker_admin_image_form', $img_id, $user);
     // copy form
